# simulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  main.cpp  run_experiments.py  run_experiments_parallel.py  run_icache_latency_parallel.py  run_icachev2_config_parallel.py  run_mmu_experiments.py  rv_simu_mmu_v2.cpp
.agent/workflows/: verify-simulator.md
.codex/skills/axi-bridge-testing/: SKILL.md
.codex/skills/generalized-io-bitvector/: SKILL.md
.codex/skills/icache-lookup-from-input/: SKILL.md
.codex/skills/module-comb-determinism/: SKILL.md
.codex/skills/pi-po-toolchain/: SKILL.md
.codex/skills/simddr-backend-dev/: SKILL.md
.codex/skills/two-phase-debug/: SKILL.md
.codex/skills/verify-simulator/: SKILL.md
.githooks/: README.md  commit-msg
MemSubSystem/: MSHR.cpp  MemSubsystem.cpp  RealDcache.cpp  SimpleCache.cpp
MemSubSystem/include/: AbstractDcache.h  DcacheConfig.h  MSHR.h  MemPtwBlock.h  MemSubsystem.h  RealDcache.h  SimpleCache.h
axi_interconnect/: AXI_Interconnect.cpp  AXI_Interconnect_AXI3.cpp  AXI_Router_AXI3.cpp  axi_interconnect_axi3_test.cpp  axi_interconnect_test.cpp
axi_interconnect/include/: AXI_Interconnect.h  AXI_Interconnect_AXI3.h  AXI_Interconnect_IO.h
axi_interleaving/: AXI_Interleaving.cpp  axi_interleaving_test.cpp
axi_interleaving/include/: AXI_Interleaving.h  AXI_Interleaving_IO.h
back-end/: BackTop.cpp  Dispatch.cpp  FTQ.cpp  Idu.cpp  Isu.cpp  PreIduQueue.cpp  Prf.cpp  ROB.cpp  Ren.cpp  Rob.cpp  TOP.cpp
back-end/Exu/: Csr.cpp  Exu.cpp
back-end/Exu/include/: AbstractFU.h  Csr.h  Exu.h  Fu.h
back-end/Lsu/: RealLsu.cpp  SimpleLsu.cpp  TlbMmu.cpp
back-end/Lsu/include/: AbstractLsu.h  AbstractMmu.h  RealLsu.h  SimpleLsu.h  TlbMmu.h
back-end/include/: BackTop.h  Dispatch.h  FTQ.h  IO.h  Idu.h  InstructionBuffer.h  IssueQueue.h  Isu.h  ModuleIOs.h  PerfCount.h  PreIduQueue.h  Prf.h  Ren.h  Rob.h  TOP.h  config.h  mmio_map.h  types.h  util.h
diff/: br_oracle.cpp  diff.cpp  ref.cpp
diff/include/: diff.h  oracle.h  ref.h
doc/: axi_interconnect_llc_design.md  config_parameters.md
doc/modules/: Lsu_Design.md  Peripheral_Difftest_Decouple_Design.md
doc/prs/: 2026-04-16-llc-ckpt-fix.md
front-end/: FrontTop.cpp  front_IO.h  front_module.h  front_top.cpp  frontend.h  frontend_stats.cpp  predecode.cpp  predecode.h  predecode_checker.cpp  predecode_checker.h  wire_types.h
front-end/BPU/: BPU.h  BPU_configs.h
front-end/BPU/dir_predictor/: TAGE_top.h
front-end/BPU/target_predictor/: BTB_top.h
front-end/config/: frontend_diag_config.h  frontend_feature_config.h
front-end/fifo/: PTAB.cpp  fetch_address_FIFO.cpp  front2bank_FIFO.cpp  front_fifo.h  instruction_FIFO.cpp
front-end/icache/: GenericTable.h  ICacheTop.cpp  icache.cpp  icache_module.cpp  icache_module_v2.cpp  icache_module_v2_design.md
front-end/icache/include/: AXI_Interconnect_IO_Compat.h  ICacheTop.h  icache_module.h  icache_module_v2.h  icache_v1_pi_po.h  icache_v2_pi_po.h
include/: FrontTop.h  MemorySubsystem.h  PeripheralModel.h  SimCpu.h  config.h  config.h.default  config.h.large  config.h.medium  config.h.small
mmio/include/: MMIO_Bus_AXI3.h
mmu/: MMU.cpp  PTW.cpp  TLB.cpp  TLBEntry.cpp  ptw_module.cpp  tlb_module.cpp
mmu/include/: MMU.h  PTW.h  TLB.h  TLBEntry.h  mmu_io.h  ptw_module.h  ptw_pi_map.csv  ptw_pi_po.h  ptw_po_map.csv  tlb_module.h  tlb_pi_map.csv  tlb_pi_po.h  tlb_po_map.csv
projects/axi-interconnect-kit/: .gitignore  CMakeLists.txt  Makefile  README.md  README_CN.md
projects/axi-interconnect-kit/.codex/skills/axi-kit-dev/: SKILL.md
projects/axi-interconnect-kit/.codex/skills/axi-kit-verify/: SKILL.md
projects/axi-interconnect-kit/axi_interconnect/: AXI_Interconnect.cpp  AXI_Interconnect_AXI3.cpp  AXI_Router_AXI3.cpp  AXI_Router_AXI4.cpp  axi_interconnect_axi3_test.cpp  axi_interconnect_test.cpp
projects/axi-interconnect-kit/axi_interconnect/include/: AXI_Interconnect.h  AXI_Interconnect_AXI3.h  AXI_Interconnect_IO.h  AXI_Router_AXI3.h  AXI_Router_AXI4.h
projects/axi-interconnect-kit/demos/: axi3_smoke.cpp  axi4_smoke.cpp
projects/axi-interconnect-kit/docs/: interfaces.md  interfaces_CN.md
projects/axi-interconnect-kit/include/: axi_interconnect_compat.h  axi_mmio_map.h
projects/axi-interconnect-kit/mmio/: MMIO_Bus_AXI4.cpp  UART16550_Device.cpp  mmio_router_axi3_test.cpp  mmio_router_axi4_test.cpp
projects/axi-interconnect-kit/mmio/include/: MMIO_Bus_AXI4.h
projects/axi-interconnect-kit/sim_ddr/: SimDDR.cpp  SimDDR_AXI3.cpp  sim_ddr_axi3_test.cpp
projects/axi-interconnect-kit/sim_ddr/include/: SimDDR.h  SimDDR_AXI3.h  SimDDR_AXI3_IO.h  SimDDR_IO.h
script/: run_all.sh
script/bsd_train/: README.md  gen_io_generator_so.py  gen_pi_po.py
script/bsd_train/configs/: icache_v1_io_generator.json
sim_ddr/: SimDDR.cpp  sim_ddr_test.cpp
sim_ddr/include/: SimDDR.h  SimDDR_AXI3.h  SimDDR_IO.h
tests/: icache_lookup_source_test.cpp
tests/equiv/seeds/: invalidate_all_idle_accept.json  invalidate_line_during_other_write.json  invalidate_line_idle_accept.json  (+10 more)
tools/: README.md  check_comb_determinism.py  check_icache_v2_generalized_io_consistency.py  comb_determinism_harness.cpp  commit_msg_lint.py  gen_icache_v1_io_generator_outer.py  gen_icache_v1_io_generator_outer_header_only.py  gen_icache_v1_pi_po.py  gen_icache_v2_io_generator_outer.py  gen_icache_v2_io_generator_outer_header_only.py  gen_icache_v2_pi_po.py  gen_io_generator_outer.py  gen_io_generator_outer_header_only.py  gen_mmu_ptw_io_generator_outer.py  gen_mmu_ptw_io_generator_outer_header_only.py  gen_mmu_ptw_pi_po.py  gen_mmu_tlb_io_generator_outer.py  gen_mmu_tlb_io_generator_outer_header_only.py  gen_mmu_tlb_pi_po.py  gen_pi_po.py  gen_pi_po_bit_map.py  regression_gate.py
tools/equiv/: .gitignore  ARCHITECTURE_CN.md  README_CN.md  compare_contract_CN.md  compare_trace.py  gen_case.py  run_expected_diff.py  run_maintenance_contracts.py  run_mvp.py  run_random_matrix.py  run_random_smoke.py  run_regression_suite.py  stimulus_schema_CN.md
uncore/mmio/: MMIO_Bus_AXI3.cpp  mmio_router_axi3_test.cpp
(+6 files in other folders)
